tmp-retrieve/objects/Product2/fields/Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Price__c</fullName>
    <formula>Minimum_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>