tmp-retrieve/objects/Product2/fields/For_meter_only__c.field-meta.xml
<CustomField>
    <fullName>For_meter_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For meter only</label>
    <type>Checkbox</type>
</CustomField>