tmp-retrieve/objects/Product2/fields/hic_qbmadeasy__Quickbook_Inventory_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hic_qbmadeasy__Quickbook_Inventory_Start_Date__c</fullName>
    <label>Quickbook Inventory Start Date</label>
    <type>Date</type>
</CustomField>