tmp-retrieve/objects/Product2/fields/hic_qbmadeasy__Quickbook_QtyOnHand__c.field-meta.xml
<CustomField>
    <fullName>hic_qbmadeasy__Quickbook_QtyOnHand__c</fullName>
    <label>Quickbook QtyOnHand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>