tmp-retrieve/objects/Product2/fields/hic_qbmadeasy__Quickbook_Track_QtyOnHand__c.field-meta.xml
<CustomField>
    <fullName>hic_qbmadeasy__Quickbook_Track_QtyOnHand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quickbook Track QtyOnHand</label>
    <type>Checkbox</type>
</CustomField>