tmp-retrieve/objects/Product2/fields/hic_qbmadeasy__Quickbooks_Asset_Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>hic_qbmadeasy__Quickbooks_Asset_Account_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quickbooks Asset Account Ref</label>
    <referenceTo>hic_qbmadeasy__Quickbooks_Account__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>