tmp-retrieve/objects/Product2/fields/hic_qbmadeasy__Quickbooks_Expense_Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>hic_qbmadeasy__Quickbooks_Expense_Account_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quickbooks Expense Account Ref</label>
    <referenceTo>hic_qbmadeasy__Quickbooks_Account__c</referenceTo>
    <relationshipLabel>Products (Quickbooks Expense Account Ref)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>