tmp-retrieve/objects/Product2/fields/hic_qbmadeasy__Quickbooks_Income_Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>hic_qbmadeasy__Quickbooks_Income_Account_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quickbooks Income Account Ref</label>
    <referenceTo>hic_qbmadeasy__Quickbooks_Account__c</referenceTo>
    <relationshipLabel>Products (Quickbooks Income Account Ref)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>