tmp-retrieve/objects/Product2/fields/hic_qbmadeasy__QuickBooks_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>hic_qbmadeasy__QuickBooks_Item_Type__c</fullName>
    <label>QuickBooks Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>NonInventory</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>81</fullName>
                <isActive>false</isActive>
                <label>81</label>
            </value>
            <value>
                <fullName>Category</fullName>
                <isActive>false</isActive>
                <label>Category</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>