tmp-retrieve/objects/Product2/fields/Minimum_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price__c</fullName>
    <label>Minimum Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>