tmp-retrieve/objects/Product2/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rent</label>
    <type>Checkbox</type>
</CustomField>