tmp-retrieve/objects/Product2/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
                <label>Busy 🔴</label>
            </value>
            <value>
                <fullName>Available</fullName>
                <label>Available 🟢</label>
            </value>
            <value>
                <fullName>Available soon</fullName>
                <label>Available soon 🟡</label>
            </value>
            <value>
                <fullName>Busy soon</fullName>
                <label>Busy soon 🟠</label>
            </value>
            <value>
                <fullName>Attention required</fullName>
                <label>Attention required 🛎️</label>
            </value>
            <value>
                <fullName>Busy soon - Available soon</fullName>
                <label>Busy soon - Available soon ⌛</label>
            </value>
            <value>
                <fullName>Available soon - Busy soon</fullName>
                <label>Available soon - Busy soon ⌛</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>