tmp-retrieve/objects/Product2/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot Desk</fullName>
            </value>
            <value>
                <fullName>Open Space</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Daily HD</fullName>
            </value>
            <value>
                <fullName>Daily Office</fullName>
            </value>
            <value>
                <fullName>Meeting Rooms</fullName>
            </value>
            <value>
                <fullName>Event Space-Balcony, roof, Lounge</fullName>
            </value>
            <value>
                <fullName>Mini Cinema</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Parking spot</fullName>
            </value>
            <value>
                <fullName>Capsules</fullName>
            </value>
            <value>
                <fullName>Food / Refreshements</fullName>
            </value>
            <value>
                <fullName>IP/VLAN</fullName>
            </value>
            <value>
                <fullName>Credits(Meeting rooms windows)</fullName>
            </value>
            <value>
                <fullName>Credits for MR</fullName>
            </value>
            <value>
                <fullName>Print Units</fullName>
            </value>
            <value>
                <fullName>Prints Color</fullName>
            </value>
            <value>
                <fullName>Prints B&amp;W</fullName>
            </value>
            <value>
                <fullName>Storage Space</fullName>
            </value>
            <value>
                <fullName>Set Up Fee</fullName>
            </value>
            <value>
                <fullName>Restoration Fee</fullName>
            </value>
            <value>
                <fullName>Deposit Amount - Manual</fullName>
                <label>Deposit</label>
            </value>
            <value>
                <fullName>Podcast Room</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Arnona</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Management Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>